Работа с планшетной и десктопной версией

--- a/src/partials/advantage.html
+++ b/src/partials/advantage.html
@@ -1,6 +1,6 @@
 <section class="advantages section">
   <div class="container">
-    <h2 class="advantages__title">Как мы это делаем</h2>
+    <h2 class="advantages__title">Как мы это делаем!</h2>
     <ul class="advantages-list">
       <li class="advantages-list__item">
         <a class="advantages-list__link" href="">
