--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,1 +1,29 @@
-<h1>hero</h1>
+<section class="hero">
+<div class="hero-main-info">
+    <h1 class="hero-title">ice cream made with passion</h1>
+    <ul class="hero-buttons-list">
+        <li><a href="">Products</a></li>
+        <li><a href="">How it’s made?</a></li>
+    </ul>
+    <!-- доделать srcset-->
+    <img class="hero-img" 
+    src="./images/hero/ice-crem-mobile.jpg"
+    srcset=""
+    alt="ice-crem image">
+</div>
+<div class="hero-product-info">
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
+    <button class="hero-arrow-button"
+    type="button">
+        <svg aria-label="slider info button">
+            <use class="hero-icon-arrow" href="./images/hero/arrow-right.svg"></use>
+        </svg>
+    </button>
+</div>
+<div class="hero-service-counting">
+    <ul class="hero-counting-list">
+        <li><span class="hero-number">16</span>cafes</li>
+        <li><span class="hero-number">23</span>food trucks</li>
+    </ul>
+</div>
+</section>
