--- a/src/partials/how-we-do-it.html
+++ b/src/partials/how-we-do-it.html
@@ -2,11 +2,11 @@
     <div class="container">
         <h2 class="how-we-do-it__title">Как мы это делаем</h2>
 
-        <ul class="how-we-do-it__list">
+        <ul class="how-we-do-it__list list">
             <li class="how-we-do-it__item">
                 <a class="how-we-do-it__link" href="#">
                     <svg class="how-we-do-it__icon" width="46" height="48">
-                        <use href=""></use>
+                        <use href="./images/sprite.svg#icon-study_program"></use>
                     </svg>
                     <h3 class="how-we-do-it__item-title">
                         Адаптированная программа подготовки к ВНО
@@ -21,7 +21,7 @@
             <li class="how-we-do-it__item">
                 <a class="how-we-do-it__link" href="#">
                     <svg class="how-we-do-it__icon" width="48" height="47">
-                        <use href=""></use>
+                        <use href="./images/sprite.svg#icon-mobile_learning"></use>
                     </svg>
                     <h3 class="how-we-do-it__item-title">
                         Аудитория и онлайн-обучение
@@ -36,7 +36,7 @@
             <li class="how-we-do-it__item">
                 <a class="how-we-do-it__link" href="#">
                     <svg class="how-we-do-it__icon" width="68" height="48">
-                        <use href=""></use>
+                        <use href="./images/sprite.svg#icon-openbook"></use>
                     </svg>
                     <h3 class="how-we-do-it__item-title">
                         Привычка читать на английском языке
@@ -51,7 +51,7 @@
             <li class="how-we-do-it__item">
                 <a class="how-we-do-it__link" href="#">
                     <svg class="how-we-do-it__icon" width="48" height="48">
-                        <use href=""></use>
+                        <use href="./images/sprite.svg#icon-psychology_support"></use>
                     </svg>
                     <h3 class="how-we-do-it__item-title">
                         Психологическая поддержка
@@ -66,7 +66,7 @@
             <li class="how-we-do-it__item">
                 <a class="how-we-do-it__link" href="#">
                     <svg class="how-we-do-it__icon" width="40" height="48">
-                        <use href=""></use>
+                        <use href="./images/sprite.svg#icon-student"></use>
                     </svg>
                     <h3 class="how-we-do-it__item-title">
                         Обучение по авторским пособиям
@@ -82,7 +82,7 @@
             <li class="how-we-do-it__item">
                 <a class="how-we-do-it__link" href="#">
                     <svg class="how-we-do-it__icon" width="57" height="48">
-                        <use href=""></use>
+                        <use href="./images/sprite.svg#icon-audiobook"></use>
                     </svg>
                     <h3 class="how-we-do-it__item-title">
                         Умение воспринимать устную английскую речь
