--- a/src/sass/layout/_how-we-do-it.scss
+++ b/src/sass/layout/_how-we-do-it.scss
@@ -1,16 +1,16 @@
 .how-we-do-it {
   @media screen and (max-width: 767px) {
-    padding-top: 198px;
+    padding-top: 50px;
     padding-bottom: 50px;
   }
 
   @media screen and (min-width: 767px) and (max-width: 1343px) {
-    padding-top: 202px;
+    padding-top: 50px;
     padding-bottom: 50px;
   }
 
   @media screen and (min-width: 1344px) {
-    padding-top: 280px;
+    padding-top: 130px;
     padding-bottom: 130px;
   }
 }
@@ -104,7 +104,7 @@
 
   &:hover,
   &:focus {
-    color: #fff;
+    color: var(--white-color);
     background-color: var(--orange-color);
   }
 }
@@ -118,7 +118,7 @@
 
   .how-we-do-it__link:hover &,
   .how-we-do-it__link:focus & {
-    fill: #fff;
+    color: var(--white-color);
   }
 }
 
@@ -145,7 +145,7 @@
 
   .how-we-do-it__link:hover &,
   .how-we-do-it__link:focus & {
-    color: #fff;
+    color: var(--white-color);
   }
 }
 
@@ -175,6 +175,29 @@
 
   .how-we-do-it__link:hover &,
   .how-we-do-it__link:focus & {
-    color: #fff;
+    color: var(--white-color);
   }
+}
+
+.dash {
+  display: inline-block;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.65;
+  letter-spacing: 0.08em;
+  color: var(--orange-color);
+
+  transition: color 250ms var(--timing-function);
+
+  .features & {
+    @media screen and (min-width: 767px) and (max-width: 1343px) {
+      padding-top: 10px;
+      padding-bottom: 10px;
+    }
+  }
+}
+
+.features__link:hover .dash,
+.features__link:focus .dash {
+  color: var(--white-color);
 }
