--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -2,11 +2,11 @@
     <div class="container">
         <h2 class="feedback-title">Отзывы выпускников</h2>
         <div class="feedback-content">
-            <div class="feedback-righr-part">
+            <div class="feedback-left-part">
                 <img class="feedback-picture" src="./images/reviews-mobile-1.jpg" alt="Тоня Кучеровская" width="90"
                     height="90">
                 <svg class="feedback-icon">
-                    <use href="./images/sprite.svg#icon-reviews-vk" width="20" height="20"></use>
+                    <use href="./images/sprite.svg#icon-reviews-vk"></use>
                 </svg>
             </div>
             <div class="feedback-righr-part">
@@ -24,8 +24,8 @@
                             що її справді хвилювала моя успішність. Вона стала для мене авторитетом, проте я не тремтіла
                             на
                             уроках, маючи страх
-                            зробити найменшу помилку. Зараз я можу похизуватись тим, що я студент...<br>
-                            <span class="feedback-text-orange">Читать дальше</span>
+                            зробити найменшу помилку. Зараз я можу похизуватись тим, що я студент...<a
+                                class="feedback-text-orange">Читать дальше</a>
                         </p>
                     </li>
 
@@ -34,7 +34,7 @@
         </div>
 
         <div class="feedback-gallery">
-            <svg class="feedback-arrow">
+            <svg class="feedback-arrow arrow-left">
                 <use href="./images/sprite.svg#icon-reviews-arrow-left" width="25" height="14"></use>
             </svg>
             <ul class="feedback-gallery-list">
@@ -60,7 +60,7 @@
                     <img class="feedback-gallery-icon" src="./images/reviews-8.jpg" alt="фото студента 7" srcset="">
                 </li>
             </ul>
-            <svg class="feedback-arrow">
+            <svg class="feedback-arrow arrow-right">
                 <use href="./images/sprite.svg#icon-reviews-arrow-right" width="25" height="14"></use>
             </svg>
         </div>
