--- a/src/sass/_reviews.scss
+++ b/src/sass/_reviews.scss
@@ -41,7 +41,6 @@
     @include font(500, 12px, 1.25, 0.08em);
     text-align: center;
     color: #3d3d3d;
-    margin-bottom: 10px;
     &-orange {
       @include font(500, 12px, 1.25, 0.08em);
       text-align: center;
@@ -83,19 +82,65 @@
   .hide-pic {
     display: block;
   }
+  .arrow-left {
+    position: absolute;
+    top: 200px;
+    left: 0;
+  }
+  .arrow-right {
+    position: absolute;
+    top: 200px;
+    right: 0;
+  }
   .feedback {
     &.section {
       padding: 50px 20px;
     }
+    & .container {
+      padding: 0 13px;
+      position: relative;
+    }
     &-content {
       display: flex;
+      justify-content: space-between;
+      padding: 40px;
+      margin-bottom: 30px;
+    }
+    &-title {
+      @include font(800, 26px, 1.21, 0.03em);
+      margin-bottom: 30px;
+    }
+    &-username {
+      @include font(800, 20px, 1.2, 0.08em);
+      margin-bottom: 20px;
     }
     &-righr-part {
       width: 412px;
     }
+    &-left-part {
+      width: 150px;
+    }
+    &-picture {
+      width: 150px;
+      height: 150px;
+    }
+    &-icon {
+      width: 30px;
+      height: 30px;
+    }
     &-text {
-      display: flex;
       text-align: start;
+      &-light {
+        text-align: start;
+        margin-bottom: 20px;
+      }
+    }
+    &-gallery {
+      justify-content: center;
+    }
+    &-gallery-list {
+      width: 558px;
+      justify-content: space-between;
     }
   }
 }
