--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -591,7 +591,6 @@ a {
   font-size: 26px;
   line-height: 1.307;
   letter-spacing: 0.03em;
-  color: #3d3d3d;
   text-align: center;
   margin-bottom: 30px;
 }
@@ -735,7 +734,6 @@ a {
   letter-spacing: 0.08em;
   text-align: center;
   color: #3d3d3d;
-  margin-bottom: 10px;
 }
 .feedback-text-orange {
   font-weight: 500;
@@ -792,22 +790,80 @@ a {
     display: block;
   }
 
+  .arrow-left {
+    position: absolute;
+    top: 200px;
+    left: 0;
+  }
+
+  .arrow-right {
+    position: absolute;
+    top: 200px;
+    right: 0;
+  }
+
   .feedback.section {
     padding: 50px 20px;
+  }
+  .feedback .container {
+    padding: 0 13px;
+    position: relative;
   }
   .feedback-content {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    padding: 40px;
+    margin-bottom: 30px;
+  }
+  .feedback-title {
+    font-weight: 800;
+    font-size: 26px;
+    line-height: 1.21;
+    letter-spacing: 0.03em;
+    margin-bottom: 30px;
+  }
+  .feedback-username {
+    font-weight: 800;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.08em;
+    margin-bottom: 20px;
   }
   .feedback-righr-part {
     width: 412px;
   }
+  .feedback-left-part {
+    width: 150px;
+  }
+  .feedback-picture {
+    width: 150px;
+    height: 150px;
+  }
+  .feedback-icon {
+    width: 30px;
+    height: 30px;
+  }
   .feedback-text {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
     text-align: start;
+  }
+  .feedback-text-light {
+    text-align: start;
+    margin-bottom: 20px;
+  }
+  .feedback-gallery {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .feedback-gallery-list {
+    width: 558px;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
   }
 }
 .request-form {
