--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -20,5 +20,5 @@
 @import './layout/teacher';
 @import './layout/guarantee';
 @import './layout/reviews';
-@import './layout/reg-form';
+// @import './layout/reg-form';
 @import './layout/footer';
