edit title, add nets

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -9,31 +9,42 @@
             </svg>
           </a>
         </li>
-        <li class="legal__item">
+        <li class="legal__item light">
           <a class="legal__link" href="">Franchise
-            <svg width="4" height="8">
+            <svg class="legal__icon" width="8" height="12">
               <use href="../src/images/sprite.svg#right"></use>
             </svg>
           </a>
         </li>
       </ul>
     </div>
-    <div>
-      <h2>homemade ice cream made <span>with passion</span></h2>
+    <div class="footer__title">
+      <span class="footer__accent">homemade ice cream made</span>
+      <h2 class="footer__name">with passion</h2>
     </div>
-    <div>
-      <ul>
-        <li class="nets__github">
-          <a class="nets__link" href="github"></a>
+      <ul class="nets__list">
+        <li class="nets__item github">
+          <a class="nets__link" href="github">
+            <svg width="18" height="18">
+              <use href="../src/images/sprite.svg#github"></use>
+            </svg>
+          </a>
         </li>
-        <li class="nets__telegram">
-          <a class="nets__link" href="telegram"></a>
+        <li class="nets__item telegram">
+          <a class="nets__link" href="telegram">
+              <svg width="18" height="18">
+                <use href="../src/images/sprite.svg#telegram"></use>
+              </svg>
+          </a>
         </li>
-        <li class="nets__facebook">
-          <a class="nets__link" href="facebook"></a>
+        <li class="nets__item facebook">
+          <a class="nets__link" href="facebook">
+              <svg width="18" height="18">
+                <use href="../src/images/sprite.svg#facebook"></use>
+              </svg>
+          </a>
         </li>
       </ul>
-    </div>
     <div>
       <b>Feel free to contact</b>
       <a href="tel:+61(0)383766284">+61 (0) 383 766 284</a>
