Добавил overflow-x: hidden; для body

--- a/src/sass/layout/_benefits.scss
+++ b/src/sass/layout/_benefits.scss
@@ -107,14 +107,14 @@
   .benefits {
     height: 560px;
     padding-top: 100px;
-    // overflow: hidden;
+    // overflow-y: hidden;
   }
   .benefits .container {
     position: relative;
   }
   .benefits .container::after {
     content: '';
-    overflow: hidden;
+    // overflow: hidden;
     display: block;
     position: absolute;
     bottom: -431px;
