изменяет разметку и стили

--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -29,18 +29,13 @@
   }
 }
 
-// .logo__desc {
-//   margin: 0;
-//   padding: 0;
-// }
-
 .footer-top__wrapper {
   @media screen and (min-width: 768px) {
     display: flex;
   }
 }
 
-.footer-top__icon {
+.footer-top__icon-phone {
   width: 20px;
   height: 20px;
   margin-right: 10px;
@@ -58,9 +53,9 @@
   }
 }
 
-.footer-top__link {
+.footer-top__link-phone {
   display: flex;
-  align-items: baseline;
+  align-items: center;
   font-weight: 600;
   font-size: 14px;
   line-height: 1.21;
@@ -84,7 +79,7 @@
   }
 }
 
-.footer-top__link-insta {
+.footer-top__link-phone-insta {
   display: flex;
 
   @media screen and (max-width: 767px) {
