--- a/src/sass/layout/_registration.scss
+++ b/src/sass/layout/_registration.scss
@@ -38,13 +38,16 @@
 .registration__wrapper {
   margin: 0 auto;
   max-width: 280px;
+  margin-bottom: 30px;
 
   @media screen and (min-width: 768px) {
     max-width: 688px;
+    margin-bottom: 40px;
   }
 
   @media screen and (min-width: 1280px) {
     max-width: 1090px;
+    margin-bottom: 56px;
   }
 }
 
@@ -67,6 +70,7 @@
 
   @media screen and (min-width: 1280px) {
     font-size: 46px;
+    margin-bottom: 50px;
   }
 }
 
@@ -77,7 +81,6 @@
   text-align: center;
   letter-spacing: 0.08em;
   color: #ffffff;
-  margin-bottom: 30px;
 
   &--accent {
     color: var(--accent-color);
@@ -125,12 +128,21 @@
   }
 }
 
-.registration-form__input--name {
+.registration-form__input-name {
   margin-bottom: 20px;
+  @media screen and (min-width: 1280px) {
+    margin-bottom: 30px;
+  }
 }
 
 .registration-form__input-tel {
   margin-bottom: 50px;
+  @media screen and (min-width: 768px) {
+    margin-bottom: 31px;
+  }
+  @media screen and (min-width: 1280px) {
+    margin-bottom: 80px;
+  }
 }
 
 .registration-form ::placeholder {
