--- a/src/partials/page-footer.html
+++ b/src/partials/page-footer.html
@@ -2,7 +2,7 @@
 <address>
   <ul>
     <li>Kyiv</li>
-    <li>380984675342</li>
+    <li>3809cxg84675342</li>
     <li>example@mail.ru</li>
   </ul>
 </address>
