--- a/src/partials/page-footer.html
+++ b/src/partials/page-footer.html
@@ -3,6 +3,6 @@
   <ul>
     <li>Kyiv</li>
     <li>3809cxg84675342</li>
-    <li>example@mail.ru</li>
+    <li>zave@mail.ru</li>
   </ul>
 </address>
