--- a/src/sass/layout/_guarantee.scss
+++ b/src/sass/layout/_guarantee.scss
@@ -63,7 +63,7 @@
         line-height: 1.3;
         text-align: center;
         letter-spacing: 0.03em;
-        color: var(--dark-bg-color);
+        color:var(--primary-text-color);
         margin: 0;
         margin-bottom: 32px;
         margin-top: 50px;
@@ -132,7 +132,7 @@
             line-height: 1.3;
             text-align: center;
             letter-spacing: 0.03em;
-            color: var(--dark-bg-color);
+            color: var(--primary-text-color);
             margin: 0;
             margin-bottom: 30px;
             margin-top: 50px;
@@ -150,7 +150,7 @@
                 font-weight: 500;
                 font-size: 20px;
                 line-height: 1.4;
-                color: #3D3D3D;
+                color: var(--additional-text-color);
                 margin: 0;
                 text-align: left;
                 width: 1038px;
@@ -180,8 +180,9 @@
             }
     
             .garantee-accent{
+
                 color:var(--accent-color);
-            }
+
     
             .garantee-description:not(:last-child):before{
     
@@ -199,10 +200,11 @@
                 line-height: 1.3;
                 text-align: center;
                 letter-spacing: 0.03em;
-                color: var(--dark-bg-color);
+                color: var(--primary-text-color);
                 margin: 0;
                 margin-bottom: 50px;
                 margin-top: 130px;
             }
             
-            }
+}
+        }
