--- a/src/partials/locations.html
+++ b/src/partials/locations.html
@@ -1,1 +1,75 @@
-<h2>locations</h2>
+<section>
+    <div class="container">
+        <ul>
+            <li>
+                <div>
+                    <h3>CAFE</h3>                    
+                </div>
+                <div>
+                    <h4>Chicago</h4>                    
+                    <p>Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+                </div>
+                <div>
+                    <div>
+                        <p>Monday - Friday</p>
+                        <p>06:00 AM - 10:00 PM</p>
+                    </div>
+                    <div>
+                        <p>Saturday - Sunday</p>
+                        <p>08:00 AM - 16:00 PM</p>
+                    </div> 
+                    <div>
+                        <a class="" href="tel:+610-383-766-284">+61(0) 383 766 284</a>
+                        <a class="" href="mailto:noreply@envato.com">noreply@envato.com</a>                         
+                    </div>
+                </div> 
+            </li>
+            <li>
+                <div>
+                    <h3>FOOD TRUCK</h3>                    
+                </div>
+                <div>
+                    <h4>Los Angeles</h4>                    
+                    <p>Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+                </div>
+                <div>
+                    <div>
+                        <p>Monday - Friday</p>
+                        <p>06:00 AM - 10:00 PM</p>
+                    </div>
+                    <div>
+                        <p>Saturday - Sunday</p>
+                        <p>08:00 AM - 16:00 PM</p>
+                    </div> 
+                    <div>
+                        <a class="" href="tel:+610-383-766-284">+61(0) 383 766 284</a>
+                        <a class="" href="mailto:noreply@envato.com">noreply@envato.com</a>                         
+                    </div>
+                </div> 
+            </li>
+            <li>
+                <div>
+                    <h3>CAFE</h3>                    
+                </div>
+                <div>
+                    <h4>New York</h4>                    
+                    <p>Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+                </div>
+                <div>
+                    <div>
+                        <p>Monday - Friday</p>
+                        <p>06:00 AM - 10:00 PM</p>
+                    </div>
+                    <div>
+                        <p>Saturday - Sunday</p>
+                        <p>08:00 AM - 16:00 PM</p>
+                    </div> 
+                    <div>
+                        <a class="" href="tel:+610-383-766-284">+61(0) 383 766 284</a>
+                        <a class="" href="mailto:noreply@envato.com">noreply@envato.com</a>                         
+                    </div>
+                </div> 
+            </li>
+        </ul>
+    </div>
+</section>
