--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -4,7 +4,18 @@
       <h2 class="products-title">products</h2>
       <ul class="products">
         <li class="products-item">
-          <picture></picture>
+          <picture>
+            <source srcset="./images/poroducts/tel/tel-products-pic1.jpg 1x, 
+            ./images/poroducts/tel/tel-products-pic1@2x.jpg 2x" 
+            media="(max-width: 768px)">
+            <source srcset="./images/poroducts/tab/tab-products-pic1.jpg 1x, 
+            ./images/poroducts/tab/tab-products-pic1@2x.jpg 2x"
+            media="(min-width: 768px)">
+            <source srcset="./images/poroducts/pc/pc-products-pic1.jpg 1x, 
+            ./images/poroducts/pc/pc-products-pic1@2x.jpg 2x"
+            media="(min-width: 1200px)">
+            <img src="./images/poroducts/tel/tel-products-pic1.jpg" alt="ice-cream"/>       
+          </picture>
           <div>
             <svg></svg>
             <h3>ice cream</h3>
@@ -12,7 +23,18 @@
           </div>
         </li>
         <li class="products-item">
-          <picture></picture>
+          <picture>
+            <source srcset="./images/poroducts/tel/tel-products-pic2.jpg 1x, 
+            ./images/poroducts/tel/tel-products-pic2@2x.jpg 2x" 
+            media="(max-width: 768px)">
+            <source srcset="./images/poroducts/tab/tab-products-pic2.jpg 1x, 
+            ./images/poroducts/tab/tab-products-pic2@2x.jpg 2x"
+            media="(min-width: 768px)">
+            <source srcset="./images/poroducts/pc/pc-products-pic2.jpg 1x, 
+            ./images/poroducts/pc/pc-products-pic2@2x.jpg 2x"
+            media="(min-width: 1200px)">
+            <img src="./images/poroducts/tel/tel-products-pic2.jpg" alt="ice-cream"/>
+          </picture>
           <div>
             <svg></svg>
             <h3>ice coffee</h3>
@@ -20,7 +42,18 @@
           </div>
         </li>
         <li class="products-item">
-          <picture></picture>
+          <picture>
+            <source srcset="./images/poroducts/tel/tel-products-pic3.jpg 1x, 
+            ./images/poroducts/tel/tel-products-pic3@2x.jpg 2x" 
+            media="(max-width: 768px)">
+            <source srcset="./images/poroducts/tab/tab-products-pic3.jpg 1x, 
+            ./images/poroducts/tab/tab-products-pic3@2x.jpg 2x"
+            media="(min-width: 768px)">
+            <source srcset="./images/poroducts/pc/pc-products-pic3.jpg 1x, 
+            ./images/poroducts/pc/pc-products-pic3@2x.jpg 2x"
+            media="(min-width: 1200px)">
+            <img src="./images/poroducts/tel/tel-products-pic3.jpg" alt="ice-cream"/>
+          </picture>
           <div>
             <svg></svg>
             <h3>milkshakes</h3>
