--- a/src/sass/layout/_registration-form.scss
+++ b/src/sass/layout/_registration-form.scss
@@ -56,7 +56,7 @@
   color: #ffffff;
   margin-bottom: 30px;
 
-  @media screen and (min-width: 768px) and (max-width: 1199px) {
+  @media screen and (min-width: 768px) {
     font-size: 26px;
     line-height: 1.3;
   }
@@ -77,7 +77,7 @@
   color: #ffffff;
   margin-bottom: 30px;
 
-  @media screen and (min-width: 768px) and (max-width: 1199px) {
+  @media screen and (min-width: 768px) {
     font-size: 14px;
     line-height: 1.214;
     padding: 0 118px;
@@ -125,7 +125,7 @@
     }
   }
 
-  @media screen and (min-width: 768px) and (max-width: 1199px) {
+  @media screen and (min-width: 768px) {
     width: 390px;
     height: 48px;
   }
@@ -163,7 +163,7 @@
   margin: 0 auto;
   margin-top: 50px;
 
-  @media screen and (min-width: 768px) and (max-width: 1199px) {
+  @media screen and (min-width: 768px) {
     margin-top: 11px;
   }
 
