секцыя ми гаранткэм закынчено

--- a/src/sass/layout/_section-teacher.scss
+++ b/src/sass/layout/_section-teacher.scss
@@ -268,7 +268,7 @@
     background-image: url(../images/teacher/line.svg);
     position: absolute;
     left: 27px;
-    margin-top: -8px;
+    margin-top: -30px;
     color: #b9b9b9;
   }
 }
@@ -305,6 +305,10 @@
     color: #b9b9b9;
   }
 }
+.guarantee-list-item:last-child:after {
+  width: 0px;
+}
+
 @media screen and (min-width: 1344px) {
   .guarantee-container-list {
     background-color: #f1f1f1;
