--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,1 +1,71 @@
-<h2>products</h2>
+<section class="products">
+    <div class="container">
+        <p class="second-name">100% natural</p>
+        <h2 class="name-section">products</h2>
+        <ul class="products-list">
+            <li class="products-item">
+                <img class="foto-products" src="./images/roze-mob.jpg" srcset="./images/roze-mob@2x.jpg 2x"
+                    alt="ice_cream">
+                <h3 class="products-name">ice cream</h3>
+                <div class="doted">
+                    <svg class="" width="50" height="15">* * *
+                        <use href="">
+                        </use>
+                    </svg>
+                </div>
+                <p class="about-ice-creame">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                    tempor
+                    incididunt ut labore et. dolore magna
+                    aliqua facilisis.
+                </p>
+                <button type="button">
+                    <svg class="" width="20" height="20">
+                        <use href=""></use>
+                    </svg>
+                </button>
+            </li>
+            <li class="products-item">
+                <img src="./images/roze-mob.jpg" srcset="./images/roze-mob@2x.jpg 2x" alt="ice_cream">
+                <h3 class="">ice cream</h3>
+                <div class="doted">
+                    <svg class="" width="" height="">
+                        <use href="">
+                        </use>
+                    </svg>
+                </div>
+                <p class="about-ice-creame">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                    tempor
+                    incididunt ut labore et. dolore magna
+                    aliqua facilisis.
+                </p>
+                <button type="button">
+                    <svg class="" width="" height="">
+                        <use href=""></use>
+                    </svg>
+                </button>
+            </li>
+            <li class="products-item">
+                <img src="./images/roze-mob.jpg" srcset="./images/roze-mob@2x.jpg 2x" alt="ice_cream">
+                <h3 class="">ice cream</h3>
+                <div class="doted">
+                    <svg class="" width="" height="">
+                        <use href="">
+                        </use>
+                    </svg>
+                </div>
+                <p class="about-ice-creame">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                    tempor
+                    incididunt ut labore et. dolore magna
+                    aliqua facilisis.
+                </p>
+                <button type="button">
+                    <svg class="" width="" height="">
+                        <use href=""></use>
+                    </svg>
+                </button>
+            </li>
+        </ul>
+
+    </div>
+
+</section>
